k8s/deploymentdb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rapsontech2db
spec:
  selector:
    matchLabels:
      app: rapsontech2db
  template:
    metadata:
      labels:
        app: rapsontech2db
    spec:
      containers:
        - name: rapsontech2db
          image: rapsonwalex/rapsontech2db
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3306
